# paddle-dash

./: .gitignore  CMakeLists.txt  Pong-Game.cbp  Pong-Game.depend  Pong-Game.layout  README.md
.github/workflows/: cmake.yml
gfx/: game-logo.psd
include/: AI.h  AI.hpp  background.h  background.hpp  constants.hpp  funcs.h  funcs.hpp  menu.h  menu.hpp  players.h  players.hpp  pongball.h  pongball.hpp  rect.h  rect.hpp  sound.h  sound.hpp  version.hpp.in  window.h  window.hpp
src/: AI.cpp  background.cpp  funcs.cpp  main.cpp  menu.cpp  players.cpp  pongball.cpp  sound.cpp  window.cpp
